shell/sass/cinnamon/_common.scss
/* ... */
.workspace-close-button,
.window-close {
  height: 36px;
  width: 36px;
  -cinnamon-close-overlap: 24px;
  background-image: url("assets/misc/close.svg");
  background-size: 36px;
  &:hover {
    height: 36px;
    width: 36px;
    background-image: url("assets/misc/close-hover.svg");
    background-size: 36px;
  }
  &:active {
    height: 36px;
    width: 36px;
    background-image: url("assets/misc/close-active.svg");
    background-size: 36px;
  }
}

.window-close:rtl {
}

.window-close-area {
  width: 400px;
  height: 120px;
  background-image: url("assets/misc/trash-icon.svg");
}

.overview-icon {
  padding: 9px;
  border: none;
  border-radius: 2px;
  color: $osd_fg_color;
  transition-duration: 0.2s;
  text-align: center;

  StLabel { padding-top: 6px; }
}


/*****************
 * Looking Glass *
 *****************/

#LookingGlassDialog {
  spacing: 4px;
  padding: 6px;
  border: none;
  border-radius: 2px;
  background-color: scale-color($osd_bg_color, $alpha: -10%);
  color: $osd_fg_color;
  box-shadow: $z-depth-4;
}


/************
 * Calendar *
 ************/

.calendar {
  padding: 0.4em 1.75em;
  spacing-rows: 0;
  spacing-columns: 0;

  &-month-label {
    margin: 8px 0;
    padding: 0;
    color: $fg_color;
    font-weight: 700;
  }

  &-change-month-back,
  &-change-month-forward {
    width: 16px;
    height: 16px;
    padding: 2px;
    border-radius: 100px;
    &:focus,
    &:hover { background-color: $semi_fill_color; }
    &:active { background-color: $fill_color; }
  }

  // arrow back
  &-change-month-back {
    background-image: url("assets/misc/calendar-arrow-left.svg");
    &:rtl {
      background-image: url("assets/misc/calendar-arrow-right.svg");
    }
  }

  // arrow forward
  &-change-month-forward {
    background-image: url("assets/misc/calendar-arrow-right.svg");
    &:rtl {
      background-image: url("assets/misc/calendar-arrow-left.svg");
    }
  }
}

.datemenu-date-label {
  padding: 0.4em 1.75em;
  border-radius: 2px;
  color: $fg_color;
  font-weight: 700;
  text-align: center;
}

.calendar-day {
  border-width: 0;
  color: $fg_color;

  &-base {
    @include fontscaling($ref_size * 0.8);
    width: 25px;
    height: 25px;
    padding: 0;
    margin: 2px;
    border-radius: 25px;
    text-align: center;
  }

  &-heading {
    @include fontscaling($ref_size * 0.7);
    width: 25px;
    height: 20px;
    margin-top: 2px;
    padding: 5px 0 0;
    background-color: transparent;
    color: $dim_fg_color;
    font-weight: 700;
    text-align: center;
  }

  &-top { border-top-width: 0; }

  &-left { border-left-width: 0; }

  &-with-events {
    background-image: none;
    color: $link_color;
    font-weight: 400;
    text-decoration: underline;
  }
}

.calendar-week-number {
  width: 25px;
  height: 20px;
  margin: 2px;
  padding: 5px 0 0;
  background-color: transparent;
  color: $dim_fg_color;
  font-weight: 700;
  font-size: inherit;
  text-align: center;
}

.calendar-nonwork-day {
  color: $secondary_fg_color;
  background-color: transparent;
}

.calendar-today {
  &,
  &:hover,
  &:active,
  &:focus {
    border-width: 0;
    color: $selected_fg_color;
    background-color: $selected_bg_color;
    font-weight: 700;
  }
}

.calendar-other-month-day {
  color: $dim_fg_color;
  opacity: 0.5;
}


/*****************
 * Notifications *
 *****************/

#notification {
  width: 34em;
  spacing-rows: 10px;
  spacing-columns: 10px;
  margin-from-right-edge-of-screen: 20px;
  padding: 13px;
  border-radius: 2px;
  border-image: url("assets/misc/osd.svg") 9 9 9 9;
  color: $osd_fg_color;

  .menu &,
  .popup-menu & {
    &, &.multi-line-notification {
      border-image: url("assets/misc/message.svg") 9 9 9 9;
      color: $fg_color;
    }

    .notification-button,
    .notification-icon-button {
      @extend %button;
      padding: 5px;
    }

    StEntry { @extend %entry; }
  }

  &.multi-line-notification {
    padding-bottom: 13px;
    color: $osd_fg_color;
  }

  &-scrollview {
    max-height: 10em;

    > .top-shadow, > .bottom-shadow { height: 1em; }

    &:ltr > StScrollBar { padding-left: 6px; }
    &:rtl > StScrollBar { padding-right: 6px; }
  }

  &-body { spacing: 5px; }

  &-actions { spacing: 10px; }
}

.notification {
  // We use row-span = 2 for the image cell, which prevents its height
  // preferences to be taken into account during allocation, so its height
  // ends up being limited by the height of the content in the other rows.
  // To avoid showing a stretched image, we set the minimum height of the
  // table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 = 159
  &-with-image {
    min-height: 159px;
    color: $osd_fg_color;
  }

  &-button,
  &-icon-button {
    @extend %osd_button;
    padding: 5px;
  }

  &-icon-button > StIcon { icon-size: 36px; }

  StEntry { @extend %osd_entry; }
}


/****************
 * App Switcher *
 ****************/

#altTabPopup {
  padding: 8px;
  spacing: 16px;
}

.switcher-list {
  padding: 20px;
  border: none;
  border-image: url("assets/misc/osd.svg") 9 9 9 9;
  border-radius: 2px;
  color: $osd_fg_color;
  background: none;

  > StBoxLayout { padding: 4px; }

  &-item-container { spacing: 8px; }

  .item-box {
    padding: 8px;
    border-radius: 2px;
    &:outlined {
      padding: 6px;
      border: 2px solid $fill_color;
    }
    &:selected {
      background-color: $accent_active_fill_color;
      color: $inverted_accent_label_color;
    }
  }

  .thumbnail { width: 256px; }

  .thumbnail-box {
    padding: 2px;
    spacing: 4px;
  }

  .separator {
    width: 1px;
    background: $borders_color;;
  }
}

.switcher-arrow {
  border-color: transparent;
  color: $osd_fg_color;
  &:highlighted {
    border-color: transparent;
    color: $selected_fg_color;
  }
}

.switcher-preview-backdrop {
}
/* ... */

